--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "toolify-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --esm src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
